# clude_code

./: .clude.example.yaml  .clude.yaml  .extreme_performance.yaml  .gitignore  .pre-commit-config.yaml  .ultra_extreme_performance.yaml  AGENT_LOOP_FIX_SUMMARY.md  AGENT_LOOP_INTEGRATION_REPORT.md  BUG_FIX_VERIFICATION_REPORT.md  CLAUDE.md  CLAUDE_CODE_IMPROVEMENT_SUMMARY.md  CLI_LOGGING_UNIFICATION.md  CLUDE.md  COMPLETE_TEST_REPORT_15_CASES.md  COMPREHENSIVE_TEST_REPORT.md  CONTINUE_TESTING.md  FINAL_COMPLETE_TEST_REPORT.md  FINAL_PERFORMANCE_OPTIMIZATION_REPORT.md  FINAL_REFACTORING_TEST_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  STRICT_COMPLETE_VERIFICATION_REPORT.md  TESTING_AND_FIXING_LOG.md  TEST_CASE_4_ANALYSIS.md  TEST_CASE_4_SUCCESS_REPORT.md  TEST_CASE_8_ANALYSIS.md  TEST_CASE_9_REALTIME_MONITORING.md  TEST_SEQUENCE_EXECUTION_REPORT.md  TEST_SUITE_PROGRESS_REPORT.md  UNIVERSAL_AGENT_SELF_REFLECTION.md  USAGE_GUIDE.md  USER_GUIDE.md  agent_design_v_1.0.md  agent_loop_analysis.md  apply_fixes.py  clude-code_可观测性增强实现指南.md  clude-code_可观测性增强方案.md  clude-code_项目深度分析报告.md  clude.example.yaml  clude.yaml  (+37 more)
config/: .clude.example.yaml
docs/: 00-overview.md  01-e2e-flow-and-state-machine.md  02-tool-protocol.md  03-repo-indexing.md  04-context-and-prompting.md  05-planning-and-tasking.md  06-code-editing-and-patching.md  07-runtime-and-terminal.md  08-lint-test-build.md  09-git-workflow.md  10-memory-and-knowledge.md  11-security-and-policy.md  12-observability.md  13-ui-cli-ux.md  14-plugin-ecosystem.md  15-deployment.md  16-development-plan.md  17-agent-decision-audit.md  18-troubleshooting-faq.md  19-contribution-guide.md  20-development-checklist.md  20-python-cli-architecture.md  21-llama-cpp-http.md  21-react-hang-analysis.md  22-plan-patching.md  23-control-protocol.md  23-mvp-2weeks-plan-python-cli.md  99-module-index.md  AGENT_DESIGN_ENTERPRISE_FEASIBILITY_REPORT.md  BUGFIX_ANALYZE_IMAGE_SIGNATURE.md  BUGFIX_MESSAGE_ROLE_ALTERNATION.md  BUGFIX_MULTIMODAL_MESSAGE_MERGE.md  BUGFIX_PLANNING_IMPORT_STEP.md  CLASSIFIER_CATEGORY_PROMPT_PROFILES_THINKING.md  CODESEARCH_TOOL.md  CODE_REVIEW_PROVIDER_SWITCH.md  CODE_SPECIFICATION.md  CONTEXT_OVERFLOW_AND_LOOP_ANALYSIS.md  DEPENDENCY_DEGRADATION_STRATEGY.md  DOCUMENTATION_AUDIT_REPORT.md  (+137 more)
schemas/: artifact.schema.json  audit_log_entry.schema.json  code_snippet.schema.json  config.schema.json  context_pack.schema.json  plan.schema.json  plugin_manifest.schema.json  policy_decision.schema.json  retrieval_hit.schema.json  step.schema.json  token_budget.schema.json  tool_call_request.schema.json  tool_call_result.schema.json  tool_call_template.schema.json  verification_policy.schema.json
scripts/: audit_providers_abstracts.py  check_provider_naming.py  migrate_orchestrator_imports.py  migrate_providers_imports.py  migrate_remaining_imports.py  self_test.py
src/: CODE_QUALITY_CHECK_REPORT.md  FULL_VECTOR_RAG_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ANALYSIS_AUTOFIX_DOCTOR.md  IMPLEMENTATION_ANALYSIS_FEEDBACK_RIPGREP.md  IMPLEMENTATION_ANALYSIS_LANCEDB_INDEXING.md  IMPLEMENTATION_ANALYSIS_PATCH_UNDO.md  IMPLEMENTATION_ANALYSIS_REPO_MAP.md  IMPLEMENTATION_ANALYSIS_SEMANTIC_FEEDBACK.md  IMPLEMENTATION_PLAN_RAG_RIPGREP.md  IMPLEMENTATION_PROGRESS_ANALYSIS.md  IMPLEMENTATION_REFINEMENT_FEEDBACK_RG.md  INDUSTRY_ANALYSIS.md  INDUSTRY_CODE_AGENT_TECH_WHITEPAPER.md  INDUSTRY_UPGRADE_FEASIBILITY_ANALYSIS.md  LARGE_SCALE_RAG_FEASIBILITY_ANALYSIS.md  RAG_INDEXING_DEEP_TUNING.md  README.md  ROADMAP.md
tests/: test_plan_patching.py  test_task.md  test_weather.py
(+332 files in other folders)
