[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clude-code"
version = "0.1.0"
description = "A Claude Code-like local code agent CLI (Python) - docs & protocol first."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
]

[project.scripts]
clude = "clude_code.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


