[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clude-code"
version = "0.1.0"
description = "A Claude Code-like local code agent CLI - docs & protocol first with full observability."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "py-spy>=0.3.14",
  "memory-profiler>=0.61.0",
]

[project.scripts]
clude = "clude_code.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".git",
  ".clude",
  "build",
  "dist",
  "src/clude_code.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["clude_code"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "^build/",
  "^dist/",
  "^src/clude_code\\.egg-info/",
  "^\\.clude/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
